Fix task row colors

--- a/public/styles/scss/base/_variables.scss
+++ b/public/styles/scss/base/_variables.scss
@@ -17,6 +17,6 @@ $cookie-banner-text-color: #5a3825;
 $cookie-button-bg-color: #e0c3a6;
 
 $todo-bg-color: #eaf6ff;
-$priority-colors: ("high": #f70000,
-    "normal": #ffd000,
-    "low": #01aeff);
+$priority-colors: ("High": #f70000,
+    "Medium": #ffd000,
+    "Low": #01aeff);
