--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -266,11 +266,11 @@ h2 {
 }
 #todo-table th:nth-child(1),
 #todo-table td:nth-child(1) {
-  width: 15%;
+  width: 20%;
 }
 #todo-table th:nth-child(2),
 #todo-table td:nth-child(2) {
-  width: 63%;
+  width: 58%;
 }
 #todo-table th:nth-child(3),
 #todo-table td:nth-child(3) {
@@ -287,21 +287,17 @@ h2 {
 #todo-table th {
   background-color: #f2f2f2;
 }
-
-.done {
-  background-color: lightgreen;
-}
-
-.not-done-high {
+#todo-table .not-done-High {
   background-color: #f70000;
 }
-
-.not-done-normal {
+#todo-table .not-done-Medium {
   background-color: #ffd000;
 }
-
-.not-done-low {
+#todo-table .not-done-Low {
   background-color: #01aeff;
+}
+#todo-table .done {
+  background-color: lightgreen;
 }
 
 #sign-up-btn, #create-new-account-btn, #home-btn, #login-btn {
