--- a/views/partials/_todo-table.ejs
+++ b/views/partials/_todo-table.ejs
@@ -8,13 +8,16 @@
             <th>Done</th>
         </tr>
         <% tasks.forEach((task, index) => { %>
-        <tr id="task-row-<%= index %>" class="<%= task.done ? 'done' : 'not-done-' + task.priority %>" data-task-id="<%= task._id %>" data-task-title="<%= task.title %>" data-task-description="<%= task.description %>" data-task-due-date="<%= task.dueDate %>" data-task-priority="<%= task.priority %>"
-            onclick="editTask(this)">
+        <tr id="task-row-<%= index %>" class="<%= task.completed ? 'done' : 'not-done-' + task.priority %>"
+            data-task-id="<%= task._id %>" data-task-title="<%= task.title %>"
+            data-task-description="<%= task.description %>" data-task-due-date="<%= task.dueDate %>"
+            data-task-priority="<%= task.priority %>" onclick="editTask(this)">
             <td><%= task.title %></td>
             <td><%= task.description %></td>
             <td><%= task.formattedDueDate %></td>
             <td><%= task.priority %></td>
-            <td><input type="checkbox" name="task_done" value="<%= task._id %>" <%= task.done ? 'checked' : '' %>></td>
+            <td><input type="checkbox" name="task_done" value="<%= task._id %>" <%= task.completed ? 'checked' : '' %>
+                    onclick="toggleTaskCompletion(event, '<%= task._id %>')"></td>
         </tr>
         <% }); %>
     </table>
