Update ejs paths to new project structure

--- a/backend/views/partials/_cookie-banner.ejs
+++ b/backend/views/partials/_cookie-banner.ejs
@@ -14,7 +14,7 @@
                 try not
                 to take it too personally. Remember, I am watching... sort of! 😜</p>
         </div>
-        <img src="images/cookie_banner.jpg" alt="Cookie" class="cookie-banner-image">
+        <img src="../../../frontend/public/images/cookie_banner.jpg" alt="Cookie" class="cookie-banner-image">
     </div>
     <button id="accept-cookie-consent">Aye Aye, Captain!</button>
 </div>
