Migrate sass files

--- a/frontend/public/styles/css/layout/layout.css
+++ b/frontend/public/styles/css/layout/layout.css
@@ -3,8 +3,8 @@
  * 3 |     background-color: $primary-color;
  *   |                       ^^^^^^^^^^^^^^
  *   '
- *   public/styles/scss/layout/_footer.scss 3:23  @import
- *   public/styles/scss/layout/layout.scss 1:9    root stylesheet */
+ *   frontend/public/styles/scss/layout/_footer.scss 3:23  @use
+ *   frontend/public/styles/scss/layout/layout.scss 1:1    root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -14,5 +14,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a   \2577 \a 3 \2502      background-color: $primary-color;\a   \2502                        ^^^^^^^^^^^^^^\a   \2575 \a   public/styles/scss/layout/_footer.scss 3:23  @import\a   public/styles/scss/layout/layout.scss 1:9    root stylesheet";
+  content: "Error: Undefined variable.\a   \2577 \a 3 \2502      background-color: $primary-color;\a   \2502                        ^^^^^^^^^^^^^^\a   \2575 \a   frontend/public/styles/scss/layout/_footer.scss 3:23  @use\a   frontend/public/styles/scss/layout/layout.scss 1:1    root stylesheet";
 }
