--- a/frontend/public/styles/scss/components/components.scss
+++ b/frontend/public/styles/scss/components/components.scss
@@ -1,8 +1,8 @@
-@import 'buttons';
-@import 'container';
-@import 'cookie-banner';
-@import 'forms';
-@import 'images';
-@import 'inputs';
-@import 'modals';
-@import 'text';
+@use 'buttons';
+@use 'container';
+@use 'cookie-banner';
+@use 'forms';
+@use 'images';
+@use 'inputs';
+@use 'modals';
+@use 'text';
