--- a/frontend/public/styles/scss/main.scss
+++ b/frontend/public/styles/scss/main.scss
@@ -1,4 +1,4 @@
-@import 'base/base';
-@import 'layout/layout';
-@import 'pages/pages';
-@import 'components/components';
+@use 'base/base';
+@use 'layout/layout';
+@use 'pages/pages';
+@use 'components/components';
