--- a/frontend/public/styles/css/components/components.css
+++ b/frontend/public/styles/css/components/components.css
@@ -3,8 +3,8 @@
  * 8 |     background-color: $cookie-banner-bg-color;
  *   |                       ^^^^^^^^^^^^^^^^^^^^^^^
  *   '
- *   public/styles/scss/components/_cookie-banner.scss 8:23  @import
- *   public/styles/scss/components/components.scss 3:9       root stylesheet */
+ *   frontend/public/styles/scss/components/_cookie-banner.scss 8:23  @use
+ *   frontend/public/styles/scss/components/components.scss 3:1       root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -14,5 +14,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a   \2577 \a 8 \2502      background-color: $cookie-banner-bg-color;\a   \2502                        ^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   public/styles/scss/components/_cookie-banner.scss 8:23  @import\a   public/styles/scss/components/components.scss 3:9       root stylesheet";
+  content: "Error: Undefined variable.\a   \2577 \a 8 \2502      background-color: $cookie-banner-bg-color;\a   \2502                        ^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   frontend/public/styles/scss/components/_cookie-banner.scss 8:23  @use\a   frontend/public/styles/scss/components/components.scss 3:1       root stylesheet";
 }
