--- a/frontend/public/styles/css/pages/pages.css
+++ b/frontend/public/styles/css/pages/pages.css
@@ -3,8 +3,8 @@
  * 199 |     $color in $priority-colors {
  *     |               ^^^^^^^^^^^^^^^^
  *     '
- *   public/styles/scss/pages/_tasks.scss 199:15  @import
- *   public/styles/scss/pages/pages.scss 4:9      root stylesheet */
+ *   frontend/public/styles/scss/pages/_tasks.scss 199:15  @use
+ *   frontend/public/styles/scss/pages/pages.scss 4:1      root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -14,5 +14,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a     \2577 \a 199 \2502      $color in $priority-colors {\a     \2502                ^^^^^^^^^^^^^^^^\a     \2575 \a   public/styles/scss/pages/_tasks.scss 199:15  @import\a   public/styles/scss/pages/pages.scss 4:9      root stylesheet";
+  content: "Error: Undefined variable.\a     \2577 \a 199 \2502      $color in $priority-colors {\a     \2502                ^^^^^^^^^^^^^^^^\a     \2575 \a   frontend/public/styles/scss/pages/_tasks.scss 199:15  @use\a   frontend/public/styles/scss/pages/pages.scss 4:1      root stylesheet";
 }
