--- a/frontend/public/styles/scss/base/_mixins.scss
+++ b/frontend/public/styles/scss/base/_mixins.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 // Mixins
 @mixin button-style($bg-color) {
     display: inline-block;
@@ -11,7 +12,7 @@
     transition: background-color 0.3s ease;
 
     &:hover {
-        background-color: darken($bg-color, 10%);
+        background-color: color.adjust($bg-color, $lightness: -10%);
     }
 }
 
