--- a/frontend/public/styles/scss/layout/layout.scss
+++ b/frontend/public/styles/scss/layout/layout.scss
@@ -1,5 +1,5 @@
-@import 'footer';
-@import 'header';
-@import 'body';
-@import 'navigation';
-@import 'responsive'
+@use 'footer';
+@use 'header';
+@use 'body';
+@use 'navigation';
+@use 'responsive'
