--- a/frontend/public/views/pages/404.ejs
+++ b/frontend/public/views/pages/404.ejs
@@ -1,6 +1,6 @@
 <main>
 
-    <img id="cat-404" src="../../../frontend/public/images/404_cat.jpeg" alt="A sad looking cat and the white text 404 not found.">
+    <img id="cat-404" src="../../images/404_cat.jpeg" alt="A sad looking cat and the white text 404 not found.">
     <button href="/" id="home-btn">Bring Me Home</button>
 
     <script>
