--- a/frontend/public/views/pages/home.ejs
+++ b/frontend/public/views/pages/home.ejs
@@ -4,7 +4,7 @@
 
     <img
       id="todo-list-img"
-      src="../../../frontend/public/images/todo_list.jpg"
+      src="../../images/todo_list.jpg"
       class="rounded-image"
       alt="A table on which there are plants, paper clips, a clipboard, an alarm clock and a ballpoint pen."
     />
