--- a/frontend/public/views/pages/tasks.ejs
+++ b/frontend/public/views/pages/tasks.ejs
@@ -5,7 +5,7 @@
 
     <%- include('_todo-table') %>
 
-    <script src="../../../frontend/public/js/task.js"></script>
+    <script src="../../js/task.js"></script>
 </main>
 
 
