--- a/frontend/public/views/partials/_head.ejs
+++ b/frontend/public/views/partials/_head.ejs
@@ -1,11 +1,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../../frontend/public/styles/css/main.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="../../../frontend/public/favicons/apple-touch-icon.png" />
-    <link rel="icon" type="image/x-icon" href="../../../frontend/public/favicons/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="../../../frontend/public/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="../../../frontend/public/favicons/favicon-16x16.png" />
-    <link rel="manifest" href="../../../frontend/public/site.webmanifest" />
+    <link rel="stylesheet" href="../../styles/css/main.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../../favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/x-icon" href="../../favicons/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../../favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../../favicons/favicon-16x16.png" />
+    <link rel="manifest" href="../../site.webmanifest" />
     <title>Task Master</title>
 </head>
