--- a/frontend/public/views/partials/_header.ejs
+++ b/frontend/public/views/partials/_header.ejs
@@ -2,6 +2,6 @@
     <h1>Task Master</h1>
     <%- include('_navbar') %>
     <button id="profile-button" class="user-profile-icon">
-        <img src="../../../frontend/public/images/profile-user.png" alt="User Profile" />
+        <img src="../../images/profile-user.png" alt="User Profile" />
     </button>
 </header>
