--- a/frontend/src/assets/scss/layout/_body.scss
+++ b/frontend/src/assets/scss/layout/_body.scss
@@ -1,20 +1,22 @@
-@use '../base/variables' as *;
+@use "../base/variables" as *;
 
-body {
-    font-family: $font-stack;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: lightgray;
-    min-height: 100vh;
-    font-size: $base-font-size;
+html,
+body,
+#app {
+  font-family: $font-stack;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: lightgray;
+  min-height: 100vh;
+  font-size: $base-font-size;
 }
 
 h1,
 h2,
 h3,
 p {
-    padding: 10px;
+  padding: 10px;
 }
