--- a/frontend/src/assets/scss/components/components.scss
+++ b/frontend/src/assets/scss/components/components.scss
@@ -1,8 +1,6 @@
-@use 'buttons';
-@use 'container';
-@use 'cookie-banner';
-@use 'forms';
-@use 'images';
-@use 'inputs';
-@use 'modals';
-@use 'text';
+@use "buttons";
+@use "cookie-banner";
+@use "forms";
+@use "images";
+@use "modals";
+@use "text";
