--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -1,4 +1,3 @@
-@use 'base/base';
-@use 'layout/layout';
-@use 'pages/pages';
-@use 'components/components';
+@use "base/base";
+@use "layout/layout";
+@use "components/components";
