--- a/frontend/src/assets/scss/_global.scss
+++ b/frontend/src/assets/scss/_global.scss
@@ -1,27 +1,27 @@
-@use "./variables" as *;
+// @use "./variables" as *;
 
-html,
-body,
-#app {
-  font-family: $font-stack;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: lightgray;
-  min-height: 100vh;
-  font-size: $base-font-size;
-}
+// html,
+// body,
+// #app {
+//   font-family: $font-stack;
+//   margin: 0;
+//   padding: 0;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   background-color: lightgray;
+//   min-height: 100vh;
+//   font-size: $base-font-size;
+// }
 
-hr {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
+// hr {
+//   margin-top: 20px;
+//   margin-bottom: 20px;
+// }
 
-h1,
-h2,
-h3,
-p {
-  padding: 10px;
-}
+// h1,
+// h2,
+// h3,
+// p {
+//   padding: 10px;
+// }
