--- a/frontend/src/assets/scss/_mixins.scss
+++ b/frontend/src/assets/scss/_mixins.scss
@@ -2,17 +2,17 @@
 @use "sass:color";
 // Mixins
 
-%button-style {
-  color: white;
-  padding: 15px 20px;
-  border: none;
-  border-radius: 5px;
-  font-size: 20px;
-  font-weight: bold;
-  cursor: pointer;
-  outline: none;
-  transition: background-color 0.3s;
-}
+// %button-style {
+//   color: white;
+//   padding: 15px 20px;
+//   border: none;
+//   border-radius: 5px;
+//   font-size: 20px;
+//   font-weight: bold;
+//   cursor: pointer;
+//   outline: none;
+//   transition: background-color 0.3s;
+// }
 
 @mixin respond-to($breakpoint) {
   @if $breakpoint ==small {
