--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -1,4 +1,15 @@
-@use "./global" as *;
+//@use "./global" as *;
 @use "./mixins" as *;
 @use "./responsive" as *;
-@use "./variables" as *;
+//@use "./variables" as *;
+
+
+$breakpoint-small: 768px;
+$breakpoint-large: 1100px;
+
+$todo-bg-color: #eaf6ff;
+$priority-colors: (
+  "High": #f70000,
+  "Medium": #ffd000,
+  "Low": #01aeff,
+);
