--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -1,6 +1,6 @@
 //@use "./global" as *;
-@use "./mixins" as *;
-@use "./responsive" as *;
+//@use "./mixins" as *;
+//@use "./responsive" as *;
 //@use "./variables" as *;
 
 
